新物料入库bug修完

--- a/BR-MS/ajaxTemplate.html
+++ b/BR-MS/ajaxTemplate.html
@@ -31,25 +31,9 @@
         },
         methods: {
             test: function () {
-                post('/depot/add_newinbound', {
-                    amount:"1",
-                    charity:"1",
-                    founder:"1",
-                    goodLocalId:"201805260120",
-                    goodName:"1",
-                    inboundNum:"1",
-                    remark:"1",
-                    supplier:"1",
-                    tel: "1",
-                    type: 1,
-                    unit: "1",
-                    warehouseId: 1,
-                    warehouseRepository: "1",
-                    warehouseName:"001仓"
-                }, (data,err) => {
-                    console.log(err);
-                    console.log(data);
-                });
+                post('/depot/reg_newgood', {localId:"1"}, (data,err)=>{
+                    console.log(err.id);
+                })
                 // $.ajax({
                 //     type:'post',
                 //     url:"http://10.112.128.63:8080/dispatch/system/get_user_info",
